--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -60,7 +60,7 @@
                 <a class="nav-link" href="#scrollspyAbout" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#scrollspyTeam" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">Team</a>
+                <a class="nav-link" href="products">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#scrollspyPricing" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasNavbar">Pricing</a>
