--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -186,7 +186,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-7">
-                        <h1 class="text-center">Hello world</h1>
+                        <h1 class="text-center">Product Detail</h1>
                         <p><%=product.productTitle%></p>
                         <p><%=product.productDescription%></p>
                         <p>Price: <%=product.productPrice%> Baht</p>
