--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -186,7 +186,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-7">
-                        <h1 class="text-center">Hello world</h1>
+                        <h1 class="text-center">Products</h1>
                         <% products.map((product)=> {
                             %><a href="/products/<%=product.id%>"><%=product.productTitle%></a><%
                             %><p><%=product.productDescription%></p><%
