--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
   <meta name="author" content="BootstrapBrain">
 
   <!-- Favicon and Touch Icons -->
-  <link rel="icon" type="image/png" sizes="512x512" href="./assets/favicon/favicon-512x512.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="../../public/assets/favicon/favicon-512x512.png">
 
   <!-- Google Fonts Files -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
 
   <!-- CSS Files -->
-  <link rel="stylesheet" href="./assets/css/wave-bsb.css">
+  <link rel="stylesheet" href="../../public/assets/css/wave-bsb.css">
 
   <!-- BSB Head -->
 </head>
@@ -33,7 +33,7 @@
     <nav id="scrollspyNav" class="navbar navbar-expand-lg bsb-tpl-bg-blue bsb-navbar bsb-navbar-hover bsb-navbar-caret bsb-tpl-navbar-sticky" data-bsb-sticky-target="#header">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="./assets/img/branding/wave-logo.svg" class="bsb-tpl-logo" alt="">
+          <img src="../../public/assets/img/branding/wave-logo.svg" class="bsb-tpl-logo" alt="">
         </a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-5 text-center">
-          <img class="img-fluid" loading="lazy" src="./assets/img/hero/hero-home.jpg" alt="" style="-webkit-mask-image: url(./assets/img/hero/hero-blob-1.svg); mask-image: url(./assets/img/hero/hero-blob-1.svg);">
+          <img class="img-fluid" loading="lazy" src="../../public/assets/img/hero/hero-home.jpg" alt="" style="-webkit-mask-image: url(../../public/assets/img/hero/hero-blob-1.svg); mask-image: url(../../public/assets/img/hero/hero-blob-1.svg);">
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
     </section>
 
     <!-- Call To Action 1 - Bootstrap Brain Component -->
-    <section class="bsb-cta-1 px-2 bsb-overlay" style="background-image: url('./assets/img/cta/cta-img-1.jpg');">
+    <section class="bsb-cta-1 px-2 bsb-overlay" style="background-image: url('../../public/assets/img/cta/cta-img-1.jpg');">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-9 col-lg-8 col-xl-8 col-xxl-7">
@@ -209,7 +209,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="./assets/img/portfolio/project-landscape-1.jpg" alt="">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="../../public/assets/img/portfolio/project-landscape-1.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInLeft">Canvas Lover</h3>
@@ -221,7 +221,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="./assets/img/portfolio/project-portrait-1.jpg" alt="">
+                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="../../public/assets/img/portfolio/project-portrait-1.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInUp">Red Lava</h3>
@@ -233,7 +233,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="./assets/img/portfolio/project-landscape-2.jpg" alt="">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="../../public/assets/img/portfolio/project-landscape-2.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInLeft">Jungle Book</h3>
@@ -245,7 +245,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="./assets/img/portfolio/project-portrait-2.jpg" alt="">
+                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="../../public/assets/img/portfolio/project-portrait-2.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInUp">Wavy Road</h3>
@@ -257,7 +257,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="./assets/img/portfolio/project-portrait-3.jpg" alt="">
+                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="../../public/assets/img/portfolio/project-portrait-3.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInUp">Golden Leaves</h3>
@@ -269,7 +269,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="./assets/img/portfolio/project-portrait-4.jpg" alt="">
+                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="../../public/assets/img/portfolio/project-portrait-4.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInUp">Minimal Notions</h3>
@@ -281,7 +281,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="./assets/img/portfolio/project-landscape-3.jpg" alt="">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="../../public/assets/img/portfolio/project-landscape-3.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInLeft">Bright Winks</h3>
@@ -293,7 +293,7 @@
           <div class="col-12 col-md-4 bsb-project-2-item">
             <figure class="rounded rounded-3 overflow-hidden bsb-overlay-hover m-0">
               <a href="#!">
-                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="./assets/img/portfolio/project-landscape-4.jpg" alt="">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="../../public/assets/img/portfolio/project-landscape-4.jpg" alt="">
               </a>
               <figcaption>
                 <h3 class="text-white bsb-hover-fadeInLeft">Innovative Day</h3>
@@ -311,7 +311,7 @@
       <div class="container">
         <div class="row gy-5 gy-lg-0 align-items-lg-center">
           <div class="col-12 col-lg-6">
-            <img class="img-fluid rounded" loading="lazy" src="./assets/img/about/about-img-1.png" alt="">
+            <img class="img-fluid rounded" loading="lazy" src="../../public/assets/img/about/about-img-1.png" alt="">
           </div>
           <div class="col-12 col-lg-6">
             <div class="row justify-content-xl-end">
@@ -442,7 +442,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm overflow-hidden">
               <div class="card-body p-0">
                 <figure class="m-0 p-0">
-                  <img class="img-fluid" loading="lazy" src="./assets/img/team/team-img-1.jpg" alt="">
+                  <img class="img-fluid" loading="lazy" src="../../public/assets/img/team/team-img-1.jpg" alt="">
                   <figcaption class="m-0 p-4">
                     <h4 class="mb-1">Flora Nyra</h4>
                     <p class="text-secondary mb-0">Product Manager</p>
@@ -455,7 +455,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm overflow-hidden">
               <div class="card-body p-0">
                 <figure class="m-0 p-0">
-                  <img class="img-fluid" loading="lazy" src="./assets/img/team/team-img-2.jpg" alt="">
+                  <img class="img-fluid" loading="lazy" src="../../public/assets/img/team/team-img-2.jpg" alt="">
                   <figcaption class="m-0 p-4">
                     <h4 class="mb-1">Evander Mac</h4>
                     <p class="text-secondary mb-0">Art Director</p>
@@ -468,7 +468,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm overflow-hidden">
               <div class="card-body p-0">
                 <figure class="m-0 p-0">
-                  <img class="img-fluid" loading="lazy" src="./assets/img/team/team-img-3.jpg" alt="">
+                  <img class="img-fluid" loading="lazy" src="../../public/assets/img/team/team-img-3.jpg" alt="">
                   <figcaption class="m-0 p-4">
                     <h4 class="mb-1">Taytum Elia</h4>
                     <p class="text-secondary mb-0">Investment Planner</p>
@@ -481,7 +481,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm overflow-hidden">
               <div class="card-body p-0">
                 <figure class="m-0 p-0">
-                  <img class="img-fluid" loading="lazy" src="./assets/img/team/team-img-4.jpg" alt="">
+                  <img class="img-fluid" loading="lazy" src="../../public/assets/img/team/team-img-4.jpg" alt="">
                   <figcaption class="m-0 p-4">
                     <h4 class="mb-1">Wylder Elio</h4>
                     <p class="text-secondary mb-0">Financial Analyst</p>
@@ -617,7 +617,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm">
               <div class="card-body p-4 p-xxl-5">
                 <figure>
-                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-1.jpg" alt="Luna John">
+                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="../../public/assets/img/testimonial/testimonial-img-1.jpg" alt="Luna John">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
                     <blockquote class="bsb-blockquote-icon mb-4">We were so impressed with the work they did for us. They were able to take our vision and turn it into a reality, and they did it all on time and within budget. We would highly recommend them to anyone looking for a reliable partner.</blockquote>
@@ -632,7 +632,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm">
               <div class="card-body p-4 p-xxl-5">
                 <figure>
-                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-2.jpg" alt="Mark Smith">
+                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="../../public/assets/img/testimonial/testimonial-img-2.jpg" alt="Mark Smith">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="4" data-bsb-star-off="1"></div>
                     <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us develop a new website that was both visually appealing and user-friendly. We are so happy with the results, and we would highly recommend them to anyone looking for a new website.</blockquote>
@@ -647,7 +647,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm">
               <div class="card-body p-4 p-xxl-5">
                 <figure>
-                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-4.jpg" alt="Luke Reeves">
+                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="../../public/assets/img/testimonial/testimonial-img-4.jpg" alt="Luke Reeves">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
                     <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us with our branding. We needed a website and marketing materials. They were able to create a brand identity that we loved. They worked with us to develop a logo that represented our company.</blockquote>
@@ -680,7 +680,7 @@
                     <article>
                       <figure class="rounded overflow-hidden mb-3 bsb-overlay-hover">
                         <a href="#!">
-                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="./assets/img/blog/blog-image-1.jpg" alt="">
+                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="../../public/assets/img/blog/blog-image-1.jpg" alt="">
                         </a>
                         <figcaption>
                           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-eye text-white bsb-hover-fadeInLeft" viewBox="0 0 16 16">
@@ -731,7 +731,7 @@
                     <article>
                       <figure class="rounded overflow-hidden mb-3 bsb-overlay-hover">
                         <a href="#!">
-                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="./assets/img/blog/blog-image-2.jpg" alt="">
+                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="../../public/assets/img/blog/blog-image-2.jpg" alt="">
                         </a>
                         <figcaption>
                           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-eye text-white bsb-hover-fadeInLeft" viewBox="0 0 16 16">
@@ -782,7 +782,7 @@
                     <article>
                       <figure class="rounded overflow-hidden mb-3 bsb-overlay-hover">
                         <a href="#!">
-                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="./assets/img/blog/blog-image-3.jpg" alt="">
+                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="../../public/assets/img/blog/blog-image-3.jpg" alt="">
                         </a>
                         <figcaption>
                           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-eye text-white bsb-hover-fadeInLeft" viewBox="0 0 16 16">
@@ -833,7 +833,7 @@
                     <article>
                       <figure class="rounded overflow-hidden mb-3 bsb-overlay-hover">
                         <a href="#!">
-                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="./assets/img/blog/blog-image-4.jpg" alt="">
+                          <img class="img-fluid bsb-scale bsb-hover-scale-up" loading="lazy" src="../../public/assets/img/blog/blog-image-4.jpg" alt="">
                         </a>
                         <figcaption>
                           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-eye text-white bsb-hover-fadeInLeft" viewBox="0 0 16 16">
@@ -894,7 +894,7 @@
       <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
           <div class="col-12 col-lg-6">
-            <img class="img-fluid rounded" loading="lazy" src="./assets/img/contact/contact-img-1.jpg" alt="">
+            <img class="img-fluid rounded" loading="lazy" src="../../public/assets/img/contact/contact-img-1.jpg" alt="">
           </div>
           <div class="col-12 col-lg-6">
             <div class="row justify-content-xl-center">
@@ -958,7 +958,7 @@
           <div class="col-12 col-md-4 col-lg-3 col-xl-2">
             <div class="widget">
               <a href="#!">
-                <img src="./assets/img/branding/wave-logo.svg" alt="" class="bsb-tpl-logo-footer">
+                <img src="../../public/assets/img/branding/wave-logo.svg" alt="" class="bsb-tpl-logo-footer">
               </a>
             </div>
           </div>
@@ -1084,8 +1084,8 @@
   <script src="https://unpkg.com/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Javascript Files: Controllers -->
-  <script src="./assets/controller/project-2.js"></script>
-  <script src="./assets/controller/wave-bsb.js"></script>
+  <script src="../../public/assets/controller/project-2.js"></script>
+  <script src="../../public/assets/controller/wave-bsb.js"></script>
 
   <!-- BSB Body End -->
 </body>
